ontopia/src/test-data/ltm/error/multsubject.ltm
[ouch
 %"http://www.1.com"
 %"http://www.2.com"]